fixed visibility for tbl-large vs tbl-mobile to media query for max-width: 767px

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -523,14 +523,6 @@ body {
       margin-right: 0;
   }
 
-  .tbl-large {
-    visibility: hidden;
-  }
-
-  .tbl-mobile {
-    visibility: visible;
-  }
-
 }
 
 .inner-action {
